[metadata]
name = suprb2
version = 0.1.0
author = Michael Heider, Jonathan Wurth, Roman-Alexander Sraj
author_email = heider.michael@uni-a.de
description = SupRB-2: The Supervised Rule-based Learning System 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/heidmic/suprb2
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
