[metadata]
name = suprb
version = 0.1.01
author = Michael Heider, Jonathan Wurth, Roman-Alexander Sraj
author_email = michael.heider@uni-a.de
description = SupRB: The Supervised Rule-based Learning System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/heidmic/suprb
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy >= 1.20.0
    scipy >= 1.7.0
    scikit-learn >= 1.0.0
