[metadata]
name = suprb
version = 1.0.15
author = Michael Heider, Jonathan Wurth, Roman-Alexander Sraj
author_email = michael.heider@uni-a.de
description = SupRB: The Supervised Rule-based Learning System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/heidmic/suprb
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = ==3.12.11
include_package_data = True
install_requires =
    matplotlib==3.10.3
    pandas==2.3.0
    pytest==8.4.1
    scikit-learn==1.7.0
    tqdm==4.67.1
